# chill.rs

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  studydb.sql
backend/src/: api.rs  main.rs  music.rs
backend/src/api/: auth.rs  db.rs  music.rs
frontend/: index.html  stream.html
frontend/assets/scripts/: audio.js  music-api.cjs  music-api.js  theme.js
frontend/assets/styles/: default.css
